# merd

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  .vercelignore  Dockerfile  demo_main.py  main.py  pyproject.toml  render.yaml  requirements-macos.txt  requirements-minimal.txt  requirements.txt  sample_marketing_data.csv  vercel-build.sh  vercel.json
backend/meridian/: setup.py
backend/meridian/analysis/: __init__.py
backend/meridian/data/: __init__.py
backend/meridian/model/: __init__.py
frontend/: .gitignore  README.md  package-lock.json  package.json  vercel.json
frontend/src/: App.js
frontend/src/components/: RoiAnalysisChart.js
frontend/src/services/: api.js
