[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-backend"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "pandas>=1.5.3",
    "numpy>=1.23.5",
    "tensorflow-cpu>=2.10.1",
    "tensorflow-probability>=0.18.0",
    "scipy>=1.9.3",
    "xarray>=2023.1.0",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.8.2",
    "h5py>=3.8.0",
    "arviz>=0.14.0",
    "pydantic<2.0.0",
    "starlette>=0.26.1",
    "typing-extensions>=4.5.0",
    "werkzeug>=2.0.3",
    "immutabledict>=2.2.3"
]
